--- a/Login/Vista.csproj
+++ b/Login/Vista.csproj
@@ -70,6 +70,12 @@
     <Compile Include="frmNotasTecnicas.Designer.cs">
       <DependentUpon>frmNotasTecnicas.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmRegistrarMaestros.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRegistrarMaestros.Designer.cs">
+      <DependentUpon>frmRegistrarMaestros.cs</DependentUpon>
+    </Compile>
     <Compile Include="notasAcademicas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmNotasTecnicas.resx">
       <DependentUpon>frmNotasTecnicas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmRegistrarMaestros.resx">
+      <DependentUpon>frmRegistrarMaestros.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="notasAcademicas.resx">
       <DependentUpon>notasAcademicas.cs</DependentUpon>
