--- a/Controlador/Controlador.csproj
+++ b/Controlador/Controlador.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ControladorConexion.cs" />
     <Compile Include="ControladorEstudiante.cs" />
+    <Compile Include="ControladorMaestro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
