Encrypt Func, and user logic

--- a/Modelo/Modelo.csproj
+++ b/Modelo/Modelo.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ModelEstudiante.cs" />
     <Compile Include="ModelMaestro.cs" />
     <Compile Include="ModeloConexion.cs" />
+    <Compile Include="ModelUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
