--- a/Controlador/Controlador.csproj
+++ b/Controlador/Controlador.csproj
@@ -44,7 +44,9 @@
     <Compile Include="ControladorConexion.cs" />
     <Compile Include="ControladorEstudiante.cs" />
     <Compile Include="ControladorMaestro.cs" />
+    <Compile Include="Encrypt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ControladorUsuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Modelo\Modelo.csproj">
