--- a/Login/Vista.csproj
+++ b/Login/Vista.csproj
@@ -94,6 +94,12 @@
     <Compile Include="frmMenuDocentes.Designer.cs">
       <DependentUpon>frmMenuDocentes.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmMostarNota.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMostarNota.Designer.cs">
+      <DependentUpon>frmMostarNota.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmNotasTecnicas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,6 +143,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMenuDocentes.resx">
       <DependentUpon>frmMenuDocentes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMostarNota.resx">
+      <DependentUpon>frmMostarNota.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmNotasTecnicas.resx">
       <DependentUpon>frmNotasTecnicas.cs</DependentUpon>
